--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li>Some Muslims believe the Torah is the first five books in the Bible</li>
         </ul>
     </div>
+    <div class="pic1">
+        <img src="https://media.istockphoto.com/id/102752443/photo/bible-scrolls.jpg?s=612x612&w=0&k=20&c=OUcl4h4rvIKXf8iS1bTLoYdCWsRir3C97_QrW1f5K3Q=" alt="" style="height: 350px; width: 350px;">
+    </div>
     <div>
         <h2>Zabur</h2>
         <h3>Around 2700yrs ago</h3>
@@ -49,10 +52,13 @@
             <li>“Indeed, this Qur'an guides to all that is good”. This is a source of wisdom and it shows how the Qur'an provides Muslims with guide on how to live a good life</li>
             <li>There are 114 surahs (chapters) beginning with 'al Fatihah', which means 'the Opener'</li>
             <li>The suarhs are arranged in order of length starting with the longest</li>
-            <li>It was revealed to Muhammad via the Angel Jibril over a peroid of 22 years</li>
+            <li>It was revealed to Muhammad (pbuh) via the Angel Jibril over a peroid of 22 years</li>
             <li>Muslims believe that the Qur'an is the word of God</li>
             <li>After the death of Muhammad, the new leader Abu Bakr orderd an offical copy to be made. In fear of it being changed when it was distributed overseas, a group of scholars wrote an offical written version.</li>
         </ul>
+    </div>
+    <div>
+        <img src="https://images.unsplash.com/photo-1609599006353-e629aaabfeae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cXVyYW58ZW58MHx8MHx8&w=1000&q=80" alt="" style="height: 350px; width: 350px;" srcset="">
     </div>
 </section>
 <section class="extension">
