--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 </section>
 <section class="extension">
-    <p>Muslims would consider the Qur'an to be the most important because it gives them a guide to being a good Muslim. This is proven by the quote of wisdom "The Quran is guidance and glad tidings for those who believe", and shows that if you believe in it you'll be rewarded.</p>
+    <p>Muslims would consider the Holy Books more imporant because it provides them with a guide to being a good Muslim. This is proven by the quote of wisdom "The Quran is guidance and glad tidings for those who believe", this quote shows how Muslims believe that if they follow the teachings of the Holy Books they'll be rewarded so it provides more value reading it over a fiction book.</p>
     <br>
 </section>
 <br>
