--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <ul>
             <li>Revealed to Dawud (King David), it was mentioned 3 times in the Qur'an</li>
             <li>Similar to the Psalms, in the Bible</li>
+            <li>Zabur means 'song music' in Arabic and is a collection of songs</li>
         </ul>
     </div>
     <div>
@@ -43,6 +44,7 @@
         <ul>
             <li>Mentioned 12 times in the Qur'an, it's believed that it refers to a book revealed to Isa (Jesus)</li>
             <li>It's thought that the Gospel has been lost but some it's message can be found in the Bible</li>
+            <li>Muslims believe it taught the virtues of love and forgiveness</li>
         </ul>
     </div>
     <div>
