--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
             <li>“Indeed, this Qur'an guides to all that is good”. This is a source of wisdom and it shows how the Qur'an provides Muslims with guide on how to live a good life</li>
             <li>There are 114 surahs (chapters) beginning with 'al Fatihah', which means 'the Opener'</li>
             <li>The suarhs are arranged in order of length starting with the longest</li>
-            <li>It was revealed to Muhammad (pbuh) via the Angel Jibril over a peroid of 22 years</li>
+            <li>It was revealed to Mohammad (pbuh) via the Angel Jibril over a peroid of 22 years</li>
             <li>Muslims believe that the Qur'an is the word of God</li>
-            <li>After the death of Muhammad, the new leader Abu Bakr orderd an offical copy to be made. In fear of it being changed when it was distributed overseas, a group of scholars wrote an offical written version.</li>
+            <li>Muslims believe the Qur'an is the only text meant for everyone to see as Mohammad was a prophet for everyone</li>
+            <li>Allah revealed it to Prophet Mohammad (pbuh) as his final revalation, because the Holy Books before had become unreliable</li>
+            <li>As it's so important Muslims won't ever touch it without washing their hands first. They will also never eat, drink or talk while reading it</li>
+            <li>After the death of Mohammad, the new leader Abu Bakr orderd an offical copy to be made. In fear of it being changed when it was distributed overseas, a group of scholars wrote an offical written version.</li>
         </ul>
     </div>
     <div>
